[package]
name = "woodchuck"
version = "0.1.0"
authors = ["Charles Ede <charlieede01@gmail.com>"]
edition = "2018"

[[bin]]
name = "woodchuck"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["macros", "sync"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
reqwest = { version = "0.10.8", features = ["rustls","blocking", "json"] }
warp = "0.2.5"
futures = "0.3.8"
regex = "1.4.2"
recap = "0.1.1"
log = "0.4.13"
env_logger = "0.8.2"
async-trait = "0.1.42"

[features]
local = []
loggly = []
